--- a/.github/workflows/ESRI_PROD.yml
+++ b/.github/workflows/ESRI_PROD.yml
@@ -66,45 +66,74 @@ jobs:
           set -e
           echo "### 📝 Test Summary" >> "$GITHUB_STEP_SUMMARY"
       
-          # Check if the test result file exists
-          if [ ! -f "test-results-${{ github.run_id }}.xml" ]; then
+          FILE="test-results-${{ github.run_id }}.xml"
+      
+          if [ ! -f "$FILE" ]; then
             echo "❌ Test results file not found." >> "$GITHUB_STEP_SUMMARY"
             exit 1
           fi
       
-          # Extract total test details from <testsuites>
-          TOTAL_TESTS=$(grep -oP '<testsuites[^>]+tests="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
-          FAILED_TESTS=$(grep -oP '<testsuites[^>]+failures="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
-          ERRORS=$(grep -oP '<testsuites[^>]+errors="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
-          SKIPPED_TESTS=$(grep -oP '<testsuites[^>]+skipped="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
+          python3 - <<EOF > summary.tmp
+          import xml.etree.ElementTree as ET
+          
+          tree = ET.parse("$FILE")
+          root = tree.getroot()
+          
+          unique_cases = set()
+          failures = 0
+          errors = 0
+          skipped = 0
+          
+          for testsuite in root.findall("testsuite"):
+              for case in testsuite.findall("testcase"):
+                  key = (case.attrib.get("name"), case.attrib.get("classname"))
+                  if key not in unique_cases:
+                      unique_cases.add(key)
+                      if case.find("failure") is not None:
+                          failures += 1
+                      elif case.find("error") is not None:
+                          errors += 1
+                      elif case.find("skipped") is not None:
+                          skipped += 1
+          
+          print(f"TOTAL={len(unique_cases)}")
+          print(f"FAILURES={failures}")
+          print(f"ERRORS={errors}")
+          print(f"SKIPPED={skipped}")
+          print("TESTCASES=")
+          for name, classname in sorted(unique_cases):
+              print(f"- {classname}")
+          EOF
       
-          # Display overall summary
+          # Read values into variables
+          source summary.tmp
+          rm summary.tmp
+      
           echo "| Metric        | Count |" >> "$GITHUB_STEP_SUMMARY"
           echo "|--------------|-------|" >> "$GITHUB_STEP_SUMMARY"
-          echo "| ✅ Total Tests  | ${TOTAL_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| ❌ Failed Tests | ${FAILED_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| ✅ Total Tests  | ${TOTAL} |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| ❌ Failed Tests | ${FAILURES} |" >> "$GITHUB_STEP_SUMMARY"
           echo "| ⚠️ Errors       | ${ERRORS} |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| ⏭️ Skipped      | ${SKIPPED_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
+          echo "| ⏭️ Skipped      | ${SKIPPED} |" >> "$GITHUB_STEP_SUMMARY"
       
-          # Extract and list individual test cases
           echo "" >> "$GITHUB_STEP_SUMMARY"
           echo "### Test Cases" >> "$GITHUB_STEP_SUMMARY"
           echo "| Test Case |" >> "$GITHUB_STEP_SUMMARY"
           echo "|-----------|" >> "$GITHUB_STEP_SUMMARY"
       
-          grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' "test-results-${{ github.run_id }}.xml" | while read -r line; do
-            TEST_NAME=$(echo "$line" | grep -oP '(?<=classname=")[^"]+')
-            ESCAPED_TEST_NAME=$(echo "$TEST_NAME" | sed 's/&amp;/\&/g' | sed 's/|/\\|/g')
-            echo "| \`$ESCAPED_TEST_NAME\` |" >> "$GITHUB_STEP_SUMMARY"
+          echo "$TESTCASES" | grep '^- ' | while read -r line; do
+            TEST_NAME=$(echo "$line" | sed 's/^- //')
+            ESCAPED_NAME=$(echo "$TEST_NAME" | sed 's/&amp;/\&/g' | sed 's/|/\\|/g')
+            echo "| \`$ESCAPED_NAME\` |" >> "$GITHUB_STEP_SUMMARY"
           done
       
-          # Highlight test results
           echo "" >> "$GITHUB_STEP_SUMMARY"
-          if [ "$FAILED_TESTS" -gt 0 ] || [ "$ERRORS" -gt 0 ]; then
+          if [ "$FAILURES" -gt 0 ] || [ "$ERRORS" -gt 0 ]; then
             echo "⚠️ **Some tests failed!**" >> "$GITHUB_STEP_SUMMARY"
           else
             echo "🎉 **All tests passed!**" >> "$GITHUB_STEP_SUMMARY"
           fi
+
 
       - name: Fail workflow if tests failed
         if: steps.run-bugbug-tests.outcome == 'failure'
