--- a/.github/workflows/Boroondara_PROD.yml
+++ b/.github/workflows/Boroondara_PROD.yml
@@ -22,6 +22,35 @@ jobs:
           suiteId: 789cbb56-95f0-49e1-ae69-f76bda86f906
           outputPath: test-results-${{ github.run_id }}.xml
 
+      - name: Remove duplicate test cases from XML
+        run: |
+          python3 - <<EOF
+          import xml.etree.ElementTree as ET
+      
+          file_path = "test-results-${{ github.run_id }}.xml"
+          tree = ET.parse(file_path)
+          root = tree.getroot()
+      
+          seen = set()
+          for testsuite in root.findall("testsuite"):
+              testcases = testsuite.findall("testcase")
+              unique_cases = []
+              for tc in testcases:
+                  key = (tc.attrib.get("name"), tc.attrib.get("classname"))
+                  if key not in seen:
+                      seen.add(key)
+                      unique_cases.append(tc)
+              # Clear and repopulate testcases
+              for tc in testcases:
+                  testsuite.remove(tc)
+              for tc in unique_cases:
+                  testsuite.append(tc)
+              # Update test count
+              testsuite.set("tests", str(len(unique_cases)))
+      
+          tree.write(file_path, encoding="utf-8", xml_declaration=True)
+          EOF
+      
       - name: Getting Run Output
         run: |
           echo "Suite Run ID: ${{ steps.run-bugbug-tests.outputs.suiteRunId }}"
@@ -32,47 +61,8 @@ jobs:
           name: bugbug-test-results-${{ github.run_id }}
           path: test-results-${{ github.run_id }}.xml
 
-      - name: Display Test Summary
+      - name: Fail workflow if tests failed
+        if: steps.run-bugbug-tests.outcome == 'failure'
         run: |
-          set -e
-          echo "### 📝 Test Summary" >> "$GITHUB_STEP_SUMMARY"
-      
-          # Check if the test result file exists
-          if [ ! -f "test-results-${{ github.run_id }}.xml" ]; then
-            echo "❌ Test results file not found." >> "$GITHUB_STEP_SUMMARY"
-            exit 1
-          fi
-      
-          # Extract total test details from <testsuites>
-          TOTAL_TESTS=$(grep -oP '<testsuites[^>]+tests="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
-          FAILED_TESTS=$(grep -oP '<testsuites[^>]+failures="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
-          ERRORS=$(grep -oP '<testsuites[^>]+errors="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
-          SKIPPED_TESTS=$(grep -oP '<testsuites[^>]+skipped="\K[0-9]+' "test-results-${{ github.run_id }}.xml" | awk '{s+=$1} END {print s}')
-      
-          # Display overall summary
-          echo "| Metric        | Count |" >> "$GITHUB_STEP_SUMMARY"
-          echo "|--------------|-------|" >> "$GITHUB_STEP_SUMMARY"
-          echo "| ✅ Total Tests  | ${TOTAL_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| ❌ Failed Tests | ${FAILED_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| ⚠️ Errors       | ${ERRORS} |" >> "$GITHUB_STEP_SUMMARY"
-          echo "| ⏭️ Skipped      | ${SKIPPED_TESTS} |" >> "$GITHUB_STEP_SUMMARY"
-      
-          # Extract and list individual test cases
-          echo "" >> "$GITHUB_STEP_SUMMARY"
-          echo "### Test Cases" >> "$GITHUB_STEP_SUMMARY"
-          echo "| Test Case |" >> "$GITHUB_STEP_SUMMARY"
-          echo "|-----------|" >> "$GITHUB_STEP_SUMMARY"
-      
-          grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' "test-results-${{ github.run_id }}.xml" | while read -r line; do
-            TEST_NAME=$(echo "$line" | grep -oP '(?<=classname=")[^"]+')
-            ESCAPED_TEST_NAME=$(echo "$TEST_NAME" | sed 's/&amp;/\&/g' | sed 's/|/\\|/g')
-            echo "| \`$ESCAPED_TEST_NAME\` |" >> "$GITHUB_STEP_SUMMARY"
-          done
-      
-          # Highlight test results
-          echo "" >> "$GITHUB_STEP_SUMMARY"
-          if [ "$FAILED_TESTS" -gt 0 ] || [ "$ERRORS" -gt 0 ]; then
-            echo "⚠️ **Some tests failed!**" >> "$GITHUB_STEP_SUMMARY"
-          else
-            echo "🎉 **All tests passed!**" >> "$GITHUB_STEP_SUMMARY"
-          fi
+          echo "BugBug test suite failed, marking workflow as failed."
+          exit 1
