--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -174,6 +174,7 @@ jobs:
           colors = ["green", "red", "gray"]
       
           # Extract test case names from the latest file in all-test-results
+          test_case_names = []
           ALL_XML_DIR = "all-test-results"
           all_test_files = sorted(
               glob.glob(f"{ALL_XML_DIR}/**/*.xml", recursive=True),
@@ -188,7 +189,9 @@ jobs:
           print(f"Using latest test result file: {latest_file}")
           last_xml = JUnitXml.fromfile(latest_file)
       
-          test_case_names = [case.name for suite in last_xml for case in suite]
+          for suite in last_xml:
+              for case in suite:
+                  test_case_names.append(case.name)
       
           # Generate bar chart
           fig = go.Figure(go.Bar(
