--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -189,6 +189,18 @@ jobs:
               exit(1)
           
           print(f"Using latest folder (by name timestamp): {latest_folder}")
+
+          # Now find the newest XML file *inside* that latest folder
+          latest_file = max(
+              glob.glob(f"{latest_folder}/**/*.xml", recursive=True),
+              key=os.path.getctime,
+              default=None
+          )
+          if not latest_file:
+              print(f"No XML files found in latest folder: {latest_folder}")
+              exit(1)
+          
+          print(f"Using latest test result file: {latest_file}")
           
           last_xml = JUnitXml.fromfile(latest_file)
   
